--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.1.4
+  flutter_blue: ^0.8.0
   
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
